--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ html::before {
     height: 40px;
 
   }
-
+/*
 #button3 {
   background-color: lightgrey;
   border-color: lightgrey;
@@ -59,7 +59,7 @@ html::before {
   padding-right: 3px;
   padding-left: 3px;
 }
-
+*/
 #navbar {
     background-color: lightgray;
     border-color: lightgray;
